# ai-ecosystem-workspace

./: .env.sample  .gitignore  README.md  compose.yml  pyproject.toml
backend/: __init__.py
backend/core/: __init__.py  config.py
backend/services/: enqueue_job.py  worker_settings.py
diagrams/: overviews.drawio
tests/: test_label_studio.py  test_postgres.py  test_settings.py
