[project]
name = "ai-eco"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "arq>=0.26.3",
    "asyncpg>=0.30.0",
    "label-studio-sdk>=1.0.8",
    "pillow>=10.4.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.8.1",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.51",
]
